small api and cosmetics changes
